--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@nextui-org/react": "^2.4.6",
+    "@prisma/client": "^5.19.1",
     "axios": "^1.7.7",
     "framer-motion": "^11.3.31",
     "iron-session": "^8.0.3",
@@ -26,6 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
