--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "framer-motion": "^11.3.31",
     "iron-session": "^8.0.3",
     "next": "14.2.7",
+    "openai": "^4.57.1",
     "react": "^18",
+    "react-camera-pro": "^1.4.0",
     "react-dom": "^18",
     "zod": "^3.23.8"
   },
