--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.19.1",
     "axios": "^1.7.7",
+    "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.31",
     "iron-session": "^8.0.3",
     "next": "14.2.7",
@@ -27,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
